fix: appslist alignment

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -250,16 +250,6 @@ input:checked + .slider:before {
 + App list v2.5 +
 ========
 */
-
-#apps {
-  margin-bottom: 15px;
-  margin-top: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-}
-
 .app {
   margin: 4px;
   padding: 15px 45px;
@@ -268,9 +258,10 @@ input:checked + .slider:before {
   position: relative;
   display: flex;
   align-items: center;
-  cursor: pointer;
   transition: all 0.3s ease;
-  right: 5%;
+  right: 1%;
+  margin-bottom: 15px;
+  margin-top: 20px;
 }
 
 .app:hover {
